Create user DELETE route
